k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: javaspring
  labels:
    app.kubernetes.io/name: javaspring
